test/ui/test/parsing/illegal-token.lushui
data System 间: 时
